    - exit with status 1 on test failure
  
  [ Daniel Hartwig ]
  * test/integration/framework:
    - continue after test failure but preserve exit status

  [ Programs translation updates ]
  * Turkish (Mert Dirik). Closes: #703526

  [ Colin Watson ]
  * methods/connect.cc:
    - provide useful error message in case of EAI_SYSTEM
      (closes: #703603)

 -- Michael Vogt <mvo@debian.org>  Sun, 17 Mar 2013 19:46:23 +0100

apt (0.9.7.8~exp2) experimental; urgency=low

  * include two missing patches to really fix bug #696225, thanks to
    Guillem Jover 
  * ensure sha512 is really used when available, thanks to Tyler Hicks
   (LP: #1098752)

 -- Michael Vogt <mvo@debian.org>  Fri, 01 Mar 2013 19:06:55 +0100

apt (0.9.7.8~exp1) experimental; urgency=low

  [ Manpages translation updates ]
  * Italian (Beatrice Torracca). Closes: #696601
  
  [ Programs translation updates ]
  * Japanese (Kenshi Muto). Closes: #699783
  
  [ Michael Vogt ]
  * fix pkgProblemResolver::Scores, thanks to Paul Wise. 
    Closes: #697577
  * fix missing translated apt.8 manpages, thanks to Helge Kreutzmann
    for the report. Closes: #696923
  * apt-pkg/contrib/progress.cc:
    - Make "..." translatable to fix inconsistencies in the output
      of e.g. apt-get update. While this adds new translatable strings,
      not having translations for them will not break anything.
      Thanks to Guillem Jover. Closes: #696225
  * debian/apt.cron.daily:
    - when reading from /dev/urandom, use less entropy and fix a rare
      bug when the random number chksum is less than 1000.
      Closes: #695285
  * methods/https.cc:
    - reuse connection in https, thanks to Thomas Bushnell, BSG for the
      patch. LP: #1087543, Closes: #695359
    - add missing curl_easy_cleanup()
  * methods/http.cc:
    - quote spaces in filenames to ensure as the http method is also
      (potentially) used for non deb,dsc content that may contain
      spaces, thanks to Daniel Hartwig and Thomas Bushnell 