@@ -15,6 +15,11 @@ apt (0.9.7.8~exp3) UNRELEASEDexperimental; urgency=low
   * methods/connect.cc:
     - provide useful error message in case of EAI_SYSTEM
       (closes: #703603)
+  
+  [ Michael Vogt ]
+  * add new config options "Acquire::ForceIPv4" and 
+    "Acquire::ForceIPv6" to allow focing one or the other
+    (closes: #611891)
 
  -- Michael Vogt <mvo@debian.org>  Sun, 17 Mar 2013 19:46:23 +0100
 
